--- a/workers/wanderly-ai/wrangler.toml
+++ b/workers/wanderly-ai/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "wanderly"
+name = "wanderly-ai"
 main = "src/index.ts"
 compatibility_date = "2024-10-18"
 compatibility_flags = ["nodejs_compat"]
