started writing worker

--- a/workers/wanderly-ai/package.json
+++ b/workers/wanderly-ai/package.json
@@ -15,5 +15,9 @@
     "typescript": "^5.5.2",
     "vitest": "2.0.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "langchain": "^0.0.120",
+    "zod": "^3.23.8"
   }
 }
